src/index.css
@import 'tailwindcss' important;

@theme {
  --breakpoint-*: initial;
  --breakpoint-desktop: 55rem;
}

body {
  --spot-size: 30px;
  --panel-size: 330px;
}

.attendant-spot {
  @apply absolute text-white rounded-full flex justify-center items-center select-none cursor-pointer  font-bold;
  background: var(--color);
  border: calc(var(--spot-size) / 15) solid white;
  width: var(--spot-size);
  height: var(--spot-size);
  font-size: calc(var(--spot-size) / 3);
  margin-left: calc(var(--spot-size) / -2);
  margin-top: calc(var(--spot-size) * -1.1);
  z-index: 10;
}

.attendant-spot::before {
  content: '';
  position: absolute;
  z-index: -1;
  bottom: calc(var(--spot-size) / -5);
  left: 50%;
  transform: translateX(-50%);
  width: 0;
  height: 0;
  border-left: calc(var(--spot-size) / 3) solid transparent;
  border-right: calc(var(--spot-size) / 3) solid transparent;
  border-top: calc(var(--spot-size) / 2) solid var(--color);
}

.attendant-spot:hover,
.attendant-spot.selected {
  background: var(--color-a);
}

.attendant-spot:hover::before,
.attendant-spot.selected::before {
  border-top-color: var(--color-a);
}

#map-container {
  @apply overflow-auto w-screen h-screen bg-gray-200 fixed;
  left: 0px;
  transition: left 0.3s;
}

@media (width>= 55rem) {
  #root.panel #map-container {
    width: calc(100vw - var(--panel-size)) !important;
    left: var(--panel-size) !important;
  }
}

#map-control {
  @apply fixed flex items-center p-4 z-[1000] bottom-0 right-0 desktop:top-0 desktop:left-[320px] desktop:bottom-auto desktop:right-auto gap-3;
  height: 68.5px !important;
}

#root.panel #map-control {
  bottom: 60px !important;
}

